<resources>
    <string name="app_name">GNS_game</string>


<!-- String Used for Home screen Buttons -->
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="How_to_play">How to Play</string>
    <string name="About">About</string>
    <!-- Description of the Title Logo -->
    <string name="GNS_logo">Title Image</string>

    <!-- Strings Used on Game Page -->
    <string name="Back">Back</string>
    <string name="Redo">Redo</string>
    <string name="Tip">Tip</string>
    <string name="Score">Score</string>
    <string name="Highscore">Highscore</string>

    <!-- Cards-->
    <string name="AH">Ace of Hearts</string>
    <string name="AS">Ace of Spades</string>
    <string name="AD">Ace of Diamonds</string>
    <string name="AC">Ace of Clubs</string>

    <string name="TwoH">Two of Hearts</string>
    <string name="TwoS">Two of Spades</string>
    <string name="TwoD">Two of Diamonds</string>
    <string name="TwoC">Two of Clubs</string>

    <string name="ThreeH">Three of Hearts</string>
    <string name="ThreeS">Three of Spades</string>
    <string name="ThreeD">Three of Diamonds</string>
    <string name="ThreeC">Three of Clubs</string>

    <string name="FourH">Four of Hearts</string>
    <string name="FourS">Four of Spades</string>
    <string name="FourD">Four of Diamonds</string>
    <string name="FourC">Four of Clubs</string>

    <string name="FiveH">Five of Hearts</string>
    <string name="FiveS">Five of Spades</string>
    <string name="FiveD">Five of Diamonds</string>
    <string name="FiveC">Five of Clubs</string>

    <string name="SixH">Six of Hearts</string>
    <string name="SixS">Six of Spades</string>
    <string name="SixD">Six of Diamonds</string>
    <string name="SixC">Six of Clubs</string>

    <string name="SevenH">Seven of Hearts</string>
    <string name="SevenS">Seven of Spades</string>
    <string name="SevenD">Seven of Diamonds</string>
    <string name="SevenC">Seven of Clubs</string>

    <string name="EightH">Eight of Hearts</string>
    <string name="EightS">Eight of Spades</string>
    <string name="EightD">Eight of Diamonds</string>
    <string name="EightC">Eight of Clubs</string>

    <string name="NineH">Nine of Hearts</string>
    <string name="NineS">Nine of Spades</string>
    <string name="NineD">Nine of Diamonds</string>
    <string name="NineC">Nine of Clubs</string>

    <string name="TenH">Ten of Hearts</string>
    <string name="TenS">Ten of Spades</string>
    <string name="TenD">Ten of Diamonds</string>
    <string name="TenC">Ten of Clubs</string>

    <string name="JackH">Jack of Hearts</string>
    <string name="JackS">Jack of Spades</string>
    <string name="JackD">Jack of Diamonds</string>
    <string name="JackC">Jack of Clubs</string>

    <string name="QueenH">Queen of Hearts</string>
    <string name="QueenS">Queen of Spades</string>
    <string name="QueenD">Queen of Diamonds</string>
    <string name="QueenC">Queen of Clubs</string>

    <string name="KingH">King of Hearts</string>
    <string name="KingS">King of Spades</string>
    <string name="KingD">King of Diamonds</string>
    <string name="KingC">King of Clubs</string>
    <string name="cellar">Cellar Card</string>

</resources>
